fix: set correct `consumer` and `provider` ids on `ContractOffer` (#2332)
* refactor: DescriptionRequestHandler

* Value consumer and provider field of contract offer

* PR remarks