@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2020, 2021 Microsoft Corporation
+ *  Copyright (c) 2020 - 2022 Amadeus
  *
  *  This program and the accompanying materials are made available under the
  *  terms of the Apache License, Version 2.0 which is available at
@@ -12,17 +12,17 @@
  *
  */
 
-package org.eclipse.edc.iam.oauth2.jwt;
+package org.eclipse.edc.iam.oauth2.spi;
 
 import org.eclipse.edc.jwt.spi.JwtDecorator;
 
 import java.time.Clock;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
-import static org.eclipse.edc.iam.oauth2.jwt.Fingerprint.sha1Base64Fingerprint;
 import static org.eclipse.edc.jwt.spi.JwtRegisteredClaimNames.AUDIENCE;
 import static org.eclipse.edc.jwt.spi.JwtRegisteredClaimNames.EXPIRATION_TIME;
 import static org.eclipse.edc.jwt.spi.JwtRegisteredClaimNames.ISSUED_AT;
@@ -30,25 +30,23 @@ import static org.eclipse.edc.jwt.spi.JwtRegisteredClaimNames.ISSUER;
 import static org.eclipse.edc.jwt.spi.JwtRegisteredClaimNames.JWT_ID;
 import static org.eclipse.edc.jwt.spi.JwtRegisteredClaimNames.SUBJECT;
 
-public class DefaultJwtDecorator implements JwtDecorator {
+public class Oauth2AssertionDecorator implements JwtDecorator {
 
     private final String audience;
     private final String clientId;
-    private final byte[] encodedCertificate;
     private final Clock clock;
-    private final long expiration;
+    private final long validity;
 
-    public DefaultJwtDecorator(String audience, String clientId, byte[] encodedCertificate, Clock clock, long expiration) {
+    public Oauth2AssertionDecorator(String audience, String clientId, Clock clock, long validity) {
         this.audience = audience;
         this.clientId = clientId;
-        this.encodedCertificate = encodedCertificate;
         this.clock = clock;
-        this.expiration = expiration;
+        this.validity = validity;
     }
 
     @Override
     public Map<String, Object> headers() {
-        return Map.of("x5t", sha1Base64Fingerprint(encodedCertificate));
+        return Collections.emptyMap();
     }
 
     @Override
@@ -59,7 +57,7 @@ public class DefaultJwtDecorator implements JwtDecorator {
                 SUBJECT, clientId,
                 JWT_ID, UUID.randomUUID().toString(),
                 ISSUED_AT, Date.from(clock.instant()),
-                EXPIRATION_TIME, Date.from(clock.instant().plusSeconds(expiration))
+                EXPIRATION_TIME, Date.from(clock.instant().plusSeconds(validity))
         );
     }
 }
